--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,30 +1,25 @@
 {
-	"title" : "Daniel Shields",
+	"title" : "Josh Fillingham",
 	"items" : [
-		{
-			"alt" : "Github",
-			"icon" : "fab fa-github",
-			"link" : "https://github.com/Dan-Shields"
-		},
 		{
 			"alt" : "Twitter",
 			"icon" : "fab fa-twitter",
-			"link" : "https://twitter.com/DanShieldsUK"
+			"link" : "https://twitter.com/Fill_30"
 		},
 		{
 			"alt": "Email",
 			"icon": "fas fa-at",
-			"link": "mailto:d@shieldsuk.me"
+			"link": "mailto:fi77.30@gmail.com"
 		},
 		{
 			"alt" : "Linkedin",
 			"icon" : "fab fa-linkedin-in",
-			"link" : "https://www.linkedin.com/in/dan98/"
+			"link" : "https://www.linkedin.com/in/joshua-fillingham-3a0574176/"
 		},
 		{
-			"alt": "Steam",
-			"icon": "fab fa-steam",
-			"link": "https://steamcommunity.com/id/daan_bread"
+			"alt" : "Instagram",
+			"icon" : "fab fa-instagram",
+			"link" : "https://instagram.com/fill_ers"
 		}
 	]
 }
