fix: update my email

--- a/public/config/config.json
+++ b/public/config/config.json
@@ -14,7 +14,7 @@
 		{
 			"alt": "Email",
 			"icon": "fas fa-at",
-			"link": "mailto:d@shieldsuk.me"
+			"link": "mailto:hello@danielshields.uk"
 		},
 		{
 			"alt" : "Linkedin",
